# hl-mesh

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Server.hx  Test.hx  compile.hxml  haxelib.json  server.hxml
generator/: gltf.idl  hmesh.idl
generator/gltf/: Generator.hx
generator/hmesh/: Generator.hx
gltf/: Native.hx
hmesh/: Native.hx
src/: cinolib_impl.cpp  gltf.cpp  gltf_impl.cpp  hl_string_helpers.cpp  hl_string_helpers.h  hmesh.cpp  hmesh_impl.cpp  hmesh_impl.h
